--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -175,6 +176,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -300,7 +302,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Shaft Torque"
+            android:text="@string/shaft_torque"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp" />
 
@@ -324,7 +326,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Magnetizing Reactance"
+            android:text="@string/magnetizing_reactance"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp" />
 
@@ -348,7 +350,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Rotor Reactance"
+            android:text="@string/rotor_reactance"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp" />
 
@@ -372,7 +374,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Rotor Resistance"
+            android:text="@string/rotor_resistance"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp" />
 
